# vcp

./: .gitignore  README.md  start-backend.bat  start-frontend.bat
VCPChat/: .gitignore  Directory.Build.targets  LICENSE  PRETEXT_INTEGRATION.md  PRETEXT_INTEGRATION_CN.md  README.md  VCP.md  _verify_desktop_widgets.js  _verify_music_playback.js  backup.py  main.html  main.js  preload.js  process_songs.py  pyproject.toml  renderer.js  requirements.txt  splash.html  start-all.bat  start-all.vbs  start-desktop.vbs  start-rag-observer.vbs  start-vchat.vbs  start.bat  style.css  vcp_chat_sync_daemon.ps1  vcpchatREADME_en.md  vcpchatREADME_jp.md  vcpchatREADME_ru.md  同步异步插件开发手册.md  启动Vchat.vbs  启动全部.vbs  打开indextts管理页_启动服务器.bat  编译并部署音频引擎.bat
VCPChat/.github/workflows/: rust_assistant_engine_build.yml
VCPChat/Agenttaskmodules/: task.css  task.html  task.js
VCPChat/Canvasmodules/: canvas.css  canvas.html  canvas.js
VCPChat/Desktopmodules/: README.md  VCPdesktop介绍文档.md  desktop.css  desktop.html  desktop.js  提示词示例.md
VCPChat/Desktopmodules/api/: desktopMetrics.js  ipcBridge.js  vcpProxy.js
VCPChat/Desktopmodules/builtinWidgets/: appTrayWidget.js  musicWidget.js  newsWidget.js  performanceMonitorWidget.js  systemMonitorWidget.js  translateWidget.js  vchatApps.js  weatherWidget.js
VCPChat/Desktopmodules/core/: dragSystem.js  performanceManager.js  state.js  statusIndicator.js  styleAutomation.js  theme.js  visibilityFreezer.js  wallpaperManager.js  widgetManager.js  widgetStandards.js  zIndexManager.js
VCPChat/Desktopmodules/css/: base.css  dock.css  icon-picker.css  settings.css  shortcuts.css  sidebar.css  theme-overrides.css  ui-components.css  widgets.css
VCPChat/Desktopmodules/debug/: debugTools.js
VCPChat/Desktopmodules/favorites/: favoritesManager.js  thumbnail.js
VCPChat/Desktopmodules/ui/: contextMenu.js  dock.js  globalSettings.js  iconPicker.js  saveModal.js  sidebar.js
VCPChat/Dicemodules/: dice.css  dice.html  dice.js
VCPChat/Flowlockmodules/: README.md  flowlock-integration.js  flowlock.css  flowlock.js
VCPChat/Forummodules/: README.md  forum.css  forum.html  forum.js
VCPChat/Groupmodules/: groupSettingsMarkup.js  groupchat.js  grouprenderer.js  topicTitleManager.js
VCPChat/Groupmodules/modes/: baseChatMode.js  inviteOnlyMode.js  natureRandomMode.js  sequentialMode.js
VCPChat/Logmodules/: log.css  log.html  log.js
VCPChat/Memomodules/: memo-graph.js  memo-workbench.js  memo.css  memo.html  memo.js
VCPChat/Musicmodules/: music-effects.js  music-local-fallback.js  music-lyrics.js  music-online.js  music-output.js  music-player.js  music-sidebar.js  music-ui.js  music-utils.js  music-visualizer.js  music-webdav.js  music.css  music.html  music.js
VCPChat/NativeSpalash/: Cargo.toml
VCPChat/NativeSpalash/src/: main.rs
VCPChat/Notemodules/: notemini.css  notemini.html  notemini.js  notes.css  notes.html  notes.js
VCPChat/PluginManagerModules/: plugin-manager.css  plugin-manager.html  plugin-manager.js
VCPChat/Promptmodules/: IMPROVEMENTS.md  README.md  modular-prompt-module.js  original-prompt-module.js  preset-prompt-module.js  prompt-manager.js  prompt-modules.css
VCPChat/RAGmodules/: RAG_Observer.html  RAG_Overlay.html  rag-observer-config.js
VCPChat/RMMusic/NORD/: Config.ini
VCPChat/SovitsTest/: GSVI.py  README.md  get_models.py  my_infer.py  test_sovits_api.py
VCPChat/Tavernmodules/: tavern-manager.js  tavern.css
VCPChat/Themesmodules/: themes-module.css  themes.html  themes.js
VCPChat/Translatormodules/: translator.css  translator.html  translator.js
VCPChat/VCPDistributedServer/: Plugin.js  VCPDistributedServer.js
VCPChat/VCPHumanToolBox/: README.md  VCHB.lnk  index.html  main.js  preload.js  renderer.js  run_silent.vbs  style.css
VCPChat/VCPHumanToolBox/ComfyUImodules/: ComfyUILoader.js  ComfyUI_StateManager.js  ComfyUI_UIManager.js  PathResolver.js  README.md  comfyUIConfig.js  comfyui-ipc.js  comfyui.css
VCPChat/VCPHumanToolBox/WorkflowEditormodules/: WorkflowEditorLoader.js  WorkflowEditorLoader_Simplified.js  WorkflowEditor_ApiConfigDialog.css  WorkflowEditor_ApiConfigDialog.js  WorkflowEditor_Architecture_Simplified.md  WorkflowEditor_CanvasManager_JSPlumb.js  WorkflowEditor_Config.js  WorkflowEditor_ConnectionManager.js  WorkflowEditor_ConnectionManager_Simplified.js  (+10 more)
VCPChat/VCPMusicPlayer/: .gitignore  build-portable.bat  electron-builder.config.js  main.js  package.json  start.bat
VCPChat/VchatManager/: CONSISTENCY_CHECK_README.md  FEATURE_SUMMARY.md  consistency-checker.js  index.html  main.js  preload.js  script.js  start.bat  style.css
VCPChat/Voicechatmodules/: recognizer.html  voicechat.css  voicechat.html  voicechat.js
VCPChat/WebIndexTTS2/: server.js  开发文档.md
VCPChat/assets/: Assistantmodules__Groupmodules__Musicmodules__Not....md
VCPChat/audio_engine/: .env
VCPChat/migration/: migrateAvatars.js  头像迁移脚本readme.md
VCPChat/modules/: DASP.txt  SovitsTTS.js  chatManager.js  contextSanitizer.js  emoticonManager.js  event-listeners.js  fileManager.js  filterManager.js  global-settings-manager.js  image-viewer.html  image-viewer.js  inputEnhancer.js  interruptHandler.js  lyricFetcher.js  messageRenderer.js  modelUsageTracker.js  mp3Encoder.js  musicScannerWorker.js  notificationRenderer.js  onlineMusicClient.js  searchManager.js  speechRecognizer.js  tavernRulesEngine.js  text-viewer.html  text-viewer.js  topicListManager.js  topicSummarizer.js  trayManager.js  ui-helpers.js  uiManager.js  vcpClient.js  weatherService.js  webdavManager.js
VCPChat/preloads/: chat.js  desktop.js  utility.js
VCPChat/rust_assistant_engine/: Cargo.toml
VCPChat/rust_audio_engine/: Cargo.toml  README - 副本.md  build.rs  soxr.pc
VCPChat/scripts/: desktopremote-http-smoke.js
VCPChat/styles/: animations.css  base.css  chat.css  components.css  layout.css  messageRenderer.css  notifications.css  search.css  settings.css
VCPToolBox/rust-vexus-lite/: Cargo.toml  index.d.ts  index.js  vexus-lite.darwin-arm64.node  vexus-lite.linux-x64-gnu.node  vexus-lite.linux-x64-musl.node  vexus-lite.win32-x64-msvc.node
(+1422 files in other folders)
