[package]
name = "vcp_audio_engine"
version = "2.0.0"
edition = "2021"
description = "VCP Hi-Fi Audio Engine - Full Rust Native"

[lib]
name = "vcp_audio_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audio_server"
path = "src/main.rs"

[dependencies]
# --- Core Audio ---
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
soxr = "0.6.0"   # Restored for f64 Hi-Fi SoX VHQ resampling

# --- Parallelism ---
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"

# --- WASAPI Exclusive Mode (Windows only) ---
[target.'cfg(windows)'.dependencies]
wasapi = "0.22"

# --- HTTP/WebSocket Server ---
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- DSP ---
rustfft = "6.2"
rand = "0.8"
ebur128 = "0.1"           # EBU R128 loudness measurement
atomic_float = "1.0"      # Atomic floating point types
arc-swap = "1.7"           # Lock-free Arc pointer swapping for audio buffers

# --- Debug: Allocation tracking in audio callback ---
assert_no_alloc = "1.1"

# --- Database ---
rusqlite = { version = "0.32", features = ["bundled"] }  # Loudness metadata persistence

# --- Utilities ---
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = { version = "0.36", features = ["serialize"] }

# --- Optional: PyO3 for backward compat ---
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
# Use RUSTFLAGS="-C target-cpu=native" for CPU-specific optimizations

[profile.release.build-override]
opt-level = 3

[package.metadata.vcpkg]
dependencies = ["soxr"]

[build-dependencies]
pkg-config = "0.3"
vcpkg = "0.2"