[package]
name = "vexus-lite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS核心依赖
napi = { version = "2.16", features = ["napi4"] }
napi-derive = "2.16"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化（bincode替代JSON）
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"

# HNSW向量索引
usearch = "2.8"

# 哈希Map优化
hashbrown = "0.14"

# 线性代数 (用于 SVD)
nalgebra = "0.32"

# SQLite 数据库驱动
rusqlite = { version = "0.29", features = ["bundled"] }

# 高性能跨平台文件监听
notify = "6.1"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true           # 链接时优化
codegen-units = 1    # 最大优化
opt-level = 3        # 最高优化级别
strip = true         # 移除符号信息