[package]
name = "deepmemo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
jieba-rs = "0.6"
tantivy = "0.19"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
ammonia = "3.3.0"
glob = "0.3"
chrono = "0.4"
regex = "1.5"
futures = "0.3"