[workspace]
members = [
  "crates/paperreader-domain",
  "crates/paperreader-application",
  "crates/paperreader-ingestion",
  "crates/paperreader-reading",
  "crates/paperreader-retrieval",
  "crates/paperreader-corpus",
  "crates/paperreader-orchestrator",
  "crates/paperreader-workspace",
  "crates/paperreader-api",
  "crates/paperreader-cli"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["A-Mao x Xiaoman"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
